TM-16165 - update control panel iz-index to avoid overlapping header menu dropdowns

--- a/grails-app/assets/stylesheets/css/elements/general/graph.sass
+++ b/grails-app/assets/stylesheets/css/elements/general/graph.sass
@@ -202,7 +202,7 @@ div.graphContainer
         width: 0px
       &.openPanel
         display: block
-        z-index: 1000
+        z-index: 75
       &:not(.openPanel)
         display: none
       .hasChanges
@@ -405,7 +405,7 @@ div.graphContainer.fullscreen
 // custom right click context menu for graphs
 .customMenu
   display: none
-  z-index: 1000
+  z-index: 75
   position: fixed
   overflow: hidden
   border: 1px solid #CCC
